Fix: Counter flickering; Map, Counter: disappears in mobile mode

--- a/client/app/components/dashboards/widget.less
+++ b/client/app/components/dashboards/widget.less
@@ -52,14 +52,4 @@
       }
     }
   }
-
-  .map-visualization-container {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: auto;
-    height: auto;
-  }
 }
